# vmgui

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/: CONFIG_WINDOW_CHANGES.md  HUB_SUPPORT_STATUS.md  REFRESH_FIX_SUMMARY.md  USB_MUX_REFRESH_FIX.md
ats_cv/: Cargo.toml
ats_cv/src/: kalman.rs  lib.rs
ats_cv_cbindgen/: Cargo.toml  cbindgen.toml
ats_cv_cbindgen/src/: lib.rs
ats_playback/: Cargo.toml
ats_playback/src/: lib.rs
ats_playback_pyo3/: Cargo.toml  fft.py  pyproject.toml
ats_playback_pyo3/src/: lib.rs
ats_usb/: Cargo.toml
ats_usb/cli/: Cargo.toml  accel_bias_calc.py
ats_usb/cli/src/: main.rs
ats_usb/src/: device.rs  lib.rs  macros.rs  packet.rs  packets.rs  udp_stream.rs
ats_usb/src/packet/: tests.rs
ats_usb/src/packets/: poc.rs  vm.rs
ats_usb/src/packets/poc/: tests.rs
ats_usb/src/packets/vm/: tests.rs  wire.rs
cli/: Cargo.toml  test_list.rs
cli/src/: bond.rs  calibration.rs  device.rs  main.rs  mux.rs
libui-rs/: CHANGELOG.md  README.md
libui-rs/iui/: Cargo.toml
libui-rs/iui/examples/: builder.rs
libui-rs/iui/src/: builder.rs  concurrent.rs  error.rs  lib.rs  ui.rs
libui-rs/iui/src/controls/: area.rs  create_macro.rs  datetimepicker.rs  entry.rs  fontbutton.rs  mod.rs  progressbar.rs  window.rs
libui-rs/iui/src/draw/: context.rs  mod.rs  path.rs  plotters.rs  text.rs
libui-rs/ui-sys/: Cargo.toml  build.rs
libui-rs/ui-sys/libui/: ui.h
libui-rs/ui-sys/libui/unix/: main.c  stddialogs.c  uipriv_unix.h
libui-rs/ui-sys/libui/windows/: stddialogs.cpp
vision-module-gui/: Cargo.toml
vision-module-gui/src/: config_window.rs  consts.rs  custom_shapes.rs  device.rs  layout_macro.rs  lib.rs  main.rs  marker_config_window.rs  mot_runner.rs  packet.rs  plots_window.rs  run_canvas.rs  run_raw_canvas.rs  test_canvas.rs  test_procedure.rs  test_procedure_view.rs  tracking_canvas_helpers.rs
vision-module-gui/src/config_window/: pag_sensor_settings.rs  paj_sensor_settings.rs  poc_sensor_settings.rs
vision-module-gui/src/marker_config_window/: calibrate.rs
wep_simulator/: Cargo.toml
wep_simulator/src/: main.rs
