[workspace]
resolver = "2"

members = [
    "libui-rs/iui",
    "libui-rs/ui-sys",
    "ats_playback",
    "ats_playback_pyo3",
    "ats_usb",
    "ats_usb/cli",
    "vision-module-gui",
    "wep_simulator",
]

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3
