[package]
name = "ats_cv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {  version = "0.32.3", default-features = false, features = [ "libm" ] }
num = { version = "0.4.1", default-features = false, features = [ "libm" ] }
