[package]
name = "ats_cv_cbindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"] # C

[dependencies]
ats_cv = { path = "../ats_cv", default-features = false }
nalgebra = {  version = "0.32.3", default-features = false, features = [ "libm" ] }

[target.thumbv7em-none-eabi.dependencies]
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
