[package]
name = "ats_cv_cbindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"] # C

[dependencies]
ahrs = { git = "https://github.com/jmagnuson/ahrs-rs", version = "0.6.0", default-features = false }
ats_cv = { path = "../ats_cv", default-features = false }
cam-geom = { version = "0.14.1", default-features = false }
nalgebra = {  version = "0.32.3", default-features = false, features = [ "libm" ] }
opencv-ros-camera = { version = "0.14.1", default-features = false }
static_assertions = "1.1.0"

[target.thumbv7em-none-eabihf.dependencies]
panic-semihosting = "0.6.0"

[target.'thumbv8m.main-none-eabihf'.dependencies]
panic-semihosting = "0.6.0"
