[package]
name = "ats_playback"
version = "0.1.0"
edition = "2021"

[lib]
name = "ats_playback"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ats_usb = { path = "../ats_usb" }
postcard = { version = "1.1.3", features = ["use-std"] }
