[package]
name = "ats_playback_pyo3"
version = "0.2.0"
edition = "2021"

[lib]
name = "ats_playback"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ats_playback = { path = "../ats_playback" }
ats_usb = { path = "../ats_usb", features = ["pyo3"] }
ats_cv = { git = "https://github.com/odysseyarm/ats_cv" }

[dependencies.pyo3]
version = "0.24.0"
features = ["extension-module", "abi3-py38"]
