[package]
name = "ats_usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argmin = "0.10.0"
enumn = "0.1.13"
nalgebra = "0.32.3"
opencv-ros-camera = { version = "0.14.1" }
serde = "1.0.204"
serde_json = "1.0.121"
serial2 = "0.2.19"
socket2 = "0.5.7"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "rt", "sync", "time", "net"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
protodongers = { git = "https://github.com/odysseyarm/protodonge-rs", features = ["std", "serde"] }

[features]
pyo3 = ["protodongers/pyo3"]
