[package]
name = "ats_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ats-cli"
path = "src/main.rs"

[dependencies]
argmin = "0.11"
argmin-math = { version = "0.5", features = ["vec"] }
ats_usb = { path = "../ats_usb" }
protodongers = { git = "https://github.com/odysseyarm/protodonge-rs.git" }
clap = { version = "4.5.11", features = ["derive"] }
futures = "0.3.30"
nalgebra = "0.34"
nusb = "0.2.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serialport = { version = "4.3.0", features = ["usbportinfo-interface"] }
tokio = { version = "1.38.0", features = ["signal", "io-std", "io-util", "macros", "rt-multi-thread"] }
anyhow = "1.0.75"
