[package]
name = "vision-module-gui"
version = "0.1.0"
edition = "2021"
default-run = "gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahrs = { git = "https://github.com/jmagnuson/ahrs-rs", version = "0.6.0", default-features=false, features = ["field_access"] }
anyhow = "1.0.75"
arrayvec = "0.7.4"
bevy = "0.13.0"
crossbeam = "0.8.4"
csv = "1.3.0"
iui = { path = "../libui-rs/iui", features = ["plotters"] }
ui-sys = { path = "../libui-rs/ui-sys" }
leptos_reactive = {  version = "0.6.4", features = ["serde"] }
nalgebra = "0.32.3"
serde = "1.0.193"
serialport = { version = "4.2.2", features = ["usbportinfo-interface"] }
serial2 = "0.2.19"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "rt", "sync", "time"] }
toml = "0.8.9"
ats_cv = { git = "https://github.com/odysseyarm/ats_cv.git", features = ["telemetry"] }
ats_playback = { path = "../ats_playback" }
ats_usb = { path = "../ats_usb" }
tokio-stream = "0.1.14"
pin-project = "1.1.4"
sqpnp = { git = "https://github.com/0e4ef622/sqpnp.git" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
enumn = "0.1.13"
bevy_infinite_grid = { git = "https://github.com/XYCaptain/bevy_infinite_grid.git", branch = "main" }
parking_lot = "0.12.1"
opencv-ros-camera = { version = "0.14.1" }
cam-geom = { version = "0.14.1" }
socket2 = "0.5.7"
hidapi = "2.6.1"
bevy_atmosphere = "0.9.1"
plotters = { version = "0.3.6", default-features = false, features = ["line_series", "point_series", "surface_series", "colormaps", "full_palette"] }
app_dirs2 = "2.5.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["commapi"] }
