[package]
name = "vision-module-gui"
version = "0.1.0"
edition = "2021"
default-run = "vmgui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy", "dep:bevy_infinite_grid", "dep:bevy_atmosphere"]

[dependencies]
ahrs = { git = "https://github.com/jmagnuson/ahrs-rs", rev = "f833f8706ed5e21a2fe9e06922373bc50bc2a2c6", default-features = false, features = ["field_access"] }
anyhow = "1.0.75"
arrayvec = "0.7.4"
crossbeam = "0.8.4"
csv = "1.3.0"
iui = { path = "../libui-rs/iui", features = ["plotters"] }
ui-sys = { path = "../libui-rs/ui-sys" }
leptos_reactive = {  version = "0.6.4", features = ["serde"] }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = "1.0.193"
serialport = { version = "4.2.2", features = ["usbportinfo-interface"] }
serial2 = "0.2.19"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "rt", "sync", "time"] }
ats_cv = { git = "https://github.com/odysseyarm/ats_cv.git", features = ["telemetry"] }
ats_common = { git = "https://github.com/odysseyarm/ats_common.git", features = ["std"] }
ats_playback = { path = "../ats_playback" }
ats_usb = { path = "../ats_usb" }
tokio-stream = "0.1.14"
pin-project = "1.1.4"
sqpnp = { git = "https://github.com/0e4ef622/sqpnp.git" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
enumn = "0.1.13"
parking_lot = "0.12.1"
opencv-ros-camera = { version = "0.14.1" }
cam-geom = { version = "0.14.1" }
socket2 = "0.5.7"
hidapi = "2.6.1"
plotters = { version = "0.3.6", default-features = false, features = ["line_series", "point_series", "surface_series", "colormaps", "full_palette"] }
app_dirs2 = "2.5.5"
serde_json = "1.0.120"
bevy = { version = "0.13.0", optional = true }
bevy_infinite_grid = { git = "https://github.com/XYCaptain/bevy_infinite_grid.git", branch = "main", optional = true }
bevy_atmosphere = { version = "0.9.1", optional = true }
