[package]
name = "vision-module-gui"
version = "0.1.0"
edition = "2021"
default-run = "vmgui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy", "dep:bevy_infinite_grid", "dep:bevy_atmosphere"]

[dependencies]
ahrs = { version = "0.8.0", features = ["field_access"] }
anyhow = "1.0.75"
arrayvec = "0.7.4"
crossbeam = "0.8.4"
csv = "1.3.0"
iui = { path = "../libui-rs/iui", features = ["plotters"] }
ui-sys = { path = "../libui-rs/ui-sys" }
leptos_reactive = {  version = "0.6.4", features = ["serde"] }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
serde = "1.0.193"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "rt", "sync", "time"] }
ats_cv = { git = "https://github.com/odysseyarm/ats_cv.git", features = ["telemetry"] }
ats_common = { git = "https://github.com/odysseyarm/ats_common.git", features = ["std"] }
ats_playback = { path = "../ats_playback" }
ats_usb = { path = "../ats_usb" }
protodongers = { git = "https://github.com/odysseyarm/protodonge-rs.git" }
tokio-stream = "0.1.14"
pin-project = "1.1.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
enumn = "0.1.13"
parking_lot = "0.12.1"
opencv-ros-camera = { git = "https://github.com/Abrahamh08/opencv-ros-camera" }
cam-geom = { version = "0.16" }
socket2 = "0.6.0"
plotters = { version = "0.3.6", default-features = false, features = ["line_series", "point_series", "surface_series", "colormaps", "full_palette"] }
app_dirs2 = "2.5.5"
serde_json = "1.0.120"
bevy = { version = "0.17.2", optional = true }
bevy_infinite_grid = { git = "https://github.com/XYCaptain/bevy_infinite_grid.git", branch = "main", optional = true }
bevy_atmosphere = { version = "0.13.0", optional = true }
num-traits = "0.2.19"
num-derive = "0.4.2"
cobs = "0.4.0"
nusb = { version = "0.2.1", features = ["tokio"] }
postcard = { version = "1.1.3", features = ["use-std"] }

# For mux-cli
clap = { version = "4", features = ["derive"] }
