[package]
name = "ats_usb_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
argmin = "0.5.1"
argmin-math = { version = "0.5.1", features = ["nalgebra_v0_34"] }
argmin-observer-slog = { git = "https://github.com/argmin-rs/argmin", rev = "f5c3fd3953771ee41d1e6425b3421de2b8ed7b24" }
ats_usb = { version = "0.1.0", path = ".." }
clap = { version = "4.5.11", features = ["derive"] }
executors = "0.9.0"
futures = "0.3.30"
nalgebra = "0.34"
nusb = "0.2.1"
serde = "1.0.204"
serde_json = "1.0.121"
serialport = { version = "4.3.0", features = ["usbportinfo-interface"] }
tokio = { version = "1.38.0", features = ["signal", "io-std", "io-util"] }
